<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_tw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/corporate"
            android:gravity="center_horizontal"
            android:text="@string/buy_go"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="50sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/login_icon" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/corporate"
            android:gravity="center"
            android:text="@string/best_or_not"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/loginName"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/kutucuk"
            android:ems="10"
            android:fontFamily="@font/corporate"
            android:gravity="center"
            android:hint="E-mail"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/kutucuk"
            android:ems="10"
            android:fontFamily="@font/corporate"
            android:gravity="center"
            android:hint="Şifre"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:fontFamily="@font/corporate"
            android:onClick="signinClicked"
            android:text="@string/login_btn"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:layout_marginLeft="145dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/google" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:fontFamily="@font/corporate"
                android:text="ile giriş yap"
                android:textColor="@color/white"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/corporate"
                android:text="Hesabınız yok mu?"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="75dp"
                android:layout_height="22dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="52dp"
                android:background="@drawable/sign_btn"
                android:onClick="registerClicked" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>